  * debian/debhelper.in/libc.NEWS: add an entry explaining the new trust-ad
    option in resolv.conf.
  * debian/patches/riscv64/local-asin-acos-raise-invalid.diff: new patch to
    workaround a GCC 10 bug on riscv64.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/git-tst-udp.diff: New patch to fix
    sunrpc/tst-udp-* failures.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 May 2020 19:22:19 +0200

glibc (2.31-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * debian/testsuite-xfail-debian.mk: Update hurd-i386 results.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Add clone3 syscall to arm64 version of arch-syscall.h.
  * debian/debhelper.in/libc-udeb.install, debian/rules.d/debhelper.mk: use
    the multiarch path in the udeb package.
  * debian/control.in/libc, debian/debhelper.in/libc-pic.install,
    debian/rules, debian/rules.d/debhelper.mk,
    debian/patches/any/local-libpic.diff: stop building the libc6-pic package.
  * debian/control.in/main, debian/rules: build with GCC 10.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 May 2020 13:12:35 +0200

glibc (2.31-0experimental0) experimental; urgency=medium

  [ Aurelien Jarno ]
  * New upstream release:
    - Adds GNU hash support on MIPS (closes: #943538).
    - debian/symbols.wildcard: add 2.31.
    - debian/debhelper.in/libc-dev{,-alt}.install: drop libmvec_nonshared.a.
    - debian/patches/localedata/locales/ku_TR: rebased.
    - debian/patches/localedata/fo_FO-date_fmt.diff: rebased.
    - debian/patches/localedata/locales-fr.diff: rebased.
    - debian/patches/localedata/locale-zh_TW.diff: rebased.
    - debian/patches/localedata/submitted-bz9725-locale-sv_SE.diff:
      upstreamed.
    - debian/patches/localedata/submitted-en_AU-date_fmt.diff: upstreamed.
    - debian/patches/alpha/local-string-functions.diff: rebased.
    - debian/patches/hurd-i386/git-ONSTACK.diff: upstreamed.