@@ -15,6 +15,8 @@ glibc (2.31-0experimental2) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/git-tst-udp.diff: New patch to fix
     sunrpc/tst-udp-* failures.
+  * debian/sysdeps/hurd-i386.mk: Add -march=i686 to fix math issues until gcc
+    is fixed to switch to i686 as was actually expected already.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 May 2020 19:22:19 +0200
 
